fix for logo on mobile

--- a/resources/css/logo.css
+++ b/resources/css/logo.css
@@ -11,6 +11,10 @@
 	box-sizing: border-box;
 	transition: opacity .8s ease .3s;
 }
+.c-logo svg{
+  width: 100%;
+  height: auto;
+}
 .c-svg--logo-group{
     width: 100%;
     height: 100%;
